--- a/files/qp_coverflow.css
+++ b/files/qp_coverflow.css
@@ -1,3 +1,9 @@
+/* Nicht entfernen - wird zum Initialiseren der padding- und margin-Werte benötigt */
+.qpCoverflow, .qpCoverflow *{
+	margin: 0;
+	padding: 0;
+}
+
 /* Wrapper für Coverflow (DIV) */
 .qpCoverflow{
 	background: #111;
